// Package declaration
package enums;

public enum CellStatus {
    EMPTY,
    SHIP,
    MISS,
    HIT,
}
